
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int* shellcode ;

void put_xor(int i,int j,int k)
{
    shellcode[j+k]=i;
}
